First commited as before_66049_rev2